# crucible

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/specs/: tiny.yaml
config/: dev-rag.yaml  dev.yaml  models.yaml
docs/: api.md  architecture.md  hardware.md  models.md  roadmap.md  ui.md
ops/: README.md  docker-compose.yml  prometheus.yml
scripts/: build-ui.sh  check.sh  install-hooks.sh  smoke_batching.py  smoke_generate.py  smoke_generation.py  smoke_manager.py  smoke_metrics.py  smoke_prefix.py  smoke_rag.py  smoke_server.py  smoke_vision.py
src/crucible/: __init__.py  client.py  service.py
src/crucible/backends/: __init__.py  base.py  embedding.py  images.py  loopguard.py  rerank.py  text.py  vision.py
src/crucible/batching/: __init__.py  backend.py  engine.py  prefix.py  scheduler.py
src/crucible/benchmark/: __init__.py  harness.py  report.py  runner.py
src/crucible/cli/: main.py
src/crucible/config/: __init__.py  loader.py  schema.py  store.py
src/crucible/hardware/: __init__.py  detect.py  profiles.py
src/crucible/history/: __init__.py  store.py
src/crucible/manager/: __init__.py  catalog.py  loader.py  manager.py  memory.py  runtime.py
src/crucible/observability/: __init__.py  dashboard.html  metrics.py
src/crucible/rag/: __init__.py  chunk.py  documents.py  pipeline.py  store.py
src/crucible/server/: app.py  payloads.py  schemas.py
tests/: conftest.py  test_backends.py  test_benchmark.py  test_catalog.py  test_config.py  test_hardware.py  test_history.py  test_loopguard.py  test_manager.py  test_metrics.py  test_mlx_smoke.py  test_packaging.py  test_prefix.py  test_rag.py  test_runtime.py  test_scheduler.py  test_server.py  test_ui.py  test_vision.py
tests/stress/: _util.py  conftest.py  test_real_capabilities.py  test_real_chaos.py  test_real_chat.py
web/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/e2e/: chat.spec.js
web/src/: App.jsx  ChatView.jsx  SidePanel.jsx  api.js  styles.css
