[project]
name = "crucible"
version = "0.0.0"
description = "Self-hosted OpenAI/Anthropic-compatible inference platform for Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx>=0.30",
    "mlx-lm>=0.28",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    "typer>=0.20",
]

[project.scripts]
mlxd = "crucible.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on function-call defaults (typer.Option/Argument); B008 is expected.
"src/crucible/cli/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
